--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,23 +14,23 @@ jobs:
           distribution: 'adopt'
           java-version: '8'
           
-      # - name: maven clean install 
-      #   run: mvn clean install -Dcheckstyle.skip -Drat.skip -U
+      - name: maven clean install 
+        run: mvn clean install -pl hadoop-ozone -am -DskipTests -Dcheckstyle.skip -Drat.skip -U
         
       # - name: Compile Module
       #   run: mvn test-compile -am -Dcheckstyle.skip -Drat.skip -U
       - name: Check
         uses: actions/checkout@v3
         with:
-          ref: fe5b9174485166cfd80da1f74505942110c0cdf7
+          ref: 36901d4d4f1d88e3b3de636ad4c379eee67f5221
   
       - name: Test with Maven 
         run: | 
-              for i in {1..5}; do mvn test -pl hadoop-ozone -am -Dtest=org.apache.hadoop.ozone.TestSecureOzoneCluster#testDelegationTokenRenewCrossCertificateRenew -DfailIfNoTests=false -Drat.skip -fae; done#>>test_log_DOXIATOOLS-64.txt || echo "Test iteration $i failed">>test_log_DOXIATOOLS-64.txt; done
+              for i in {1..100}; do mvn test -pl hadoop-ozone -am -Dtest=org.apache.hadoop.ozone.scm.TestSecretKeySnapshot#testInstallSnapshot -DfailIfNoTests=false -Drat.skip -fae>>test_log_HDDS-8839.txt || echo "Test iteration $i failed">>test_log_HDDS-8839.txt; done
               
-      # - name: Upload Test Log 
-      #   if: always() 
-      #   uses: actions/upload-artifact@v2 
-      #   with: 
-      #     name: test_log_DOXIATOOLS-64
-      #     path: test_log_DOXIATOOLS-64.txt
+      - name: Upload Test Log 
+        if: always() 
+        uses: actions/upload-artifact@v2 
+        with: 
+          name: test_log_HDDS-8839
+          path: test_log_HDDS-8839.txt
